src/test/resources/example/cocos/valid/validVariableName.ocl
ocl validVariableName {
  context boolean Person.changeCompany(String name)
  let 
    oldCo = company;
  pre Test : true;
  post Test: false;
  
}